add sb-admin-2 theme

--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -1,6 +1,28 @@
-<h1>Dashboard</h1>
-
-<div class="list-group">
-    <a href="" [routerLink]="['Users', 'UserAdd']" class="list-group-item">Новый пользователь</a>
-    
+<div class="row">
+     <div class="col-lg-12">
+          <h1 class="page-header">Сеть "h18"</h1>
+      </div>
+     <!-- /.col-lg-12 -->
 </div>
+<!-- /.row -->
+ <div class="row">
+     <div class="col-lg-12">
+         <div class="panel panel-default">
+             <div class="panel-heading">
+                 Создание элементов
+             </div>
+             <div class="panel-body">
+                 <div class="row">
+                     <div class="col-lg-6">
+                         <form role="form">
+                              <div class="list-group">
+                                 <a href="" [routerLink]="['Users', 'UserAdd']" class="list-group-item">Новый пользователь</a>
+                              </div>
+                          </form>
+                      </div>
+                  </div>
+             </div>
+        </div>
+   </div>
+   </div>
+
