--- a/app/user/users-list.component.html
+++ b/app/user/users-list.component.html
@@ -1,6 +1,38 @@
-<h1>Пользователи</h1>
 
-<div class="row">
+ <div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Пользователи</h1>
+    </div>
+    <!-- /.col-lg-12 -->
+<!-- /.row -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            Пользователи системы
+                            <span>&nbsp;</span>
+                            <a href="" [routerLink]="['UserAdd']" class="btn btn-primary btn-xs pull-right">Добавить пользователя</a>
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="dataTable_wrapper">
+                                <table class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                    <thead>
+                                        <tr>
+                                            <th>Имя пользователя</th>                                            
+                                        </tr>
+                                    </thead>
+                                    <tbody >
+                                        <tr *ngFor="let user of users">
+                                            <td  >{{user.name}}</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                      </div>
+                </div>
+          </div>
+      </div>
+ </div>
     <div class="col-md-12">
         <ul class="list-group">
             <li class="list-group-item">
