--- a/app/user/user-add.component.html
+++ b/app/user/user-add.component.html
@@ -1,67 +1,94 @@
-<div class="container">
-  <h1>Новый пользователь</h1>
-    <div [hidden]="submitted">
-       <form class="form-horizontal" *ngIf="active" (ngSubmit)="onSubmit()"  #userAdd="ngForm">
-           <div class="form-group">
-               <label for="userName" class="col-sm-2 control-label">Имя пользователя</label>
-               <div class="col-sm-10">
-                   <input id="userName" class="form-control" ngControl="userName" [(ngModel)]="user.userName" #userName="ngForm" required minlength="3" maxlength="64" placeholder="Jon">             
+
+<div class="row">
+    <div class="col-lg-12">
+        <h1 class="page-header">Новый пользователь</h1>
+ </div>
+    <!-- /.col-lg-12 -->
+    <!-- /.row -->
+  <div class="row">
+        <div class="col-lg-12">
+            <div class="panel" [ngClass]="submitted? 'panel-success' : 'panel-default'">
+                <div class="panel-heading">                    
+                     <span>&nbsp;</span> 
+                     <button class="btn btn-default" (click)="goBack()"><i class="fa fa-arrow-circle-left fa-lg"></i></button>
+                </div>
+                 <!-- /.panel-heading -->
+                <div class="panel-body">
+                   <div [hidden]="submitted">
+                     <form class="form-horizontal" *ngIf="active" (ngSubmit)="onSubmit()"  #userAdd="ngForm">
+                      <div class="form-group">
+                          <label for="userName" class="col-sm-2 control-label">Имя пользователя</label>
+                          <div class="col-sm-10">
+                              <input id="userName" class="form-control" ngControl="userName" [(ngModel)]="user.userName" #userName="ngForm" required minlength="3" maxlength="64" placeholder="Jon">             
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="attribute" class="col-sm-2 control-label">Атрибут</label>
+                          <div class="col-sm-10">
+                              <input id="attribute" class="form-control" ngControl="attribute" [(ngModel)]="user.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="op" class="col-sm-2 control-label">ОП</label>
+                          <div class="col-sm-10">
+                              <input id="op" class="form-control" ngControl="op" [(ngModel)]="user.op" required minlength="1" maxlength="2" placeholder=":=">
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label for="value" class="col-sm-2 control-label">Значение</label>
+                          <div class="col-sm-10">
+                              <input id="value" class="form-control" ngControl="value" [(ngModel)]="user.value" required minlength="6" maxlength="253" placeholder="mypassword">
+                          </div>
+                      </div>  
+                      <div class="form-group">
+                          <div class="col-sm-offset-2 col-sm-10">
+                              <span><button type="button" class="btn btn-default" (click)="clearForm()"><i class="fa fa-eraser fa-lg"></i> очистить</button></span>                   
+                              <span><button type="submit" class="btn btn-default pull-right"  [disabled]="!userAdd.form.valid"><i class="fa fa-save fa-lg"></i> сохранить</button></span>
+                          </div>
+                      </div>
+                  </form>
                </div>
-           </div>
-           <div class="form-group">
-               <label for="attribute" class="col-sm-2 control-label">Атрибут</label>
-               <div class="col-sm-10">
-                   <input id="attribute" class="form-control" ngControl="attribute" [(ngModel)]="user.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
-               </div>
-           </div>
-           <div class="form-group">
-               <label for="op" class="col-sm-2 control-label">ОП</label>
-               <div class="col-sm-10">
-                   <input id="op" class="form-control" ngControl="op" [(ngModel)]="user.op" required minlength="1" maxlength="2" placeholder=":=">
-               </div>
-           </div>
-           <div class="form-group">
-               <label for="value" class="col-sm-2 control-label">Значение</label>
-               <div class="col-sm-10">
-                   <input id="value" class="form-control" ngControl="value" [(ngModel)]="user.value" required minlength="6" maxlength="253" placeholder="mypassword">
-               </div>
-           </div>  
-           <div class="form-group">
-               <div class="col-sm-offset-2 col-sm-10">
-                   <span><button type="submit" class="btn btn-default"  [disabled]="!userAdd.form.valid">Сохранить</button></span>
-                   <span><button class="btn btn-default" (click)="goBack()">Назад</button></span>
-               </div>
-           </div>
-       </form>
-    </div>
+
+         <div [hidden]="!submitted">
+             <form class="form-horizontal">
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Имя пользователя</label>
+                          <div class="col-sm-10">
+                              <input class="form-control" placeholder="{{ user.userName }}" readonly>            
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Атрибут</label>
+                          <div class="col-sm-10">
+                              <input class="form-control" placeholder="{{ user.attribute }}" readonly>             
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">ОП</label>
+                          <div class="col-sm-10">
+                              <input class="form-control" placeholder="{{ user.op }}" readonly>     
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Значение</label>
+                          <div class="col-sm-10">
+                              <input class="form-control" placeholder="{{ user.value }}" readonly>       
+                          </div>
+                      </div>
+                     
+                      <div class="form-group">
+                          <div class="col-sm-offset-2 col-sm-10">
+                              <span><button type="button" class="btn btn-default" (click)="submitted=false"><i class="fa fa-pencil fa-lg"></i> редактрировать</button></span>
+                              <span><button type="button" class="btn btn-success pull-right" (click)="onSave()"><i class="fa fa-save fa-lg"></i> сохранить</button></span>                              
+                          </div>
+                      </div>
+                  </form>
+             
+             
+             
+             
+             </div>
+         </div>
+     </div>
 </div>
-
-<div [hidden]="!submitted">
-    
-            <div class="row">
-                <div class="col-xs-3">Имя</div>
-                <div class="col-xs-9  pull-left">{{ user.userName }}</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-3">Атрибут</div>
-                <div class="col-xs-9 pull-left">{{ user.attribute }}</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-3">ОП</div>
-                <div class="col-xs-9 pull-left">{{ user.op }}</div>
-            </div>
-            <div class="row">
-                <div class="col-xs-3">Значение</div>
-                <div class="col-xs-9 pull-left">{{ user.value }}</div>
-            </div>
-           
-            
-                <button class="btn btn-default" (click)="submitted=false">Редактрировать</button>
-                <button type="button" class="btn btn-default" (click)="clearForm()">Очистить</button>
-                <button type="button" class="btn btn-primary" (click)="onSave()">Cохранить</button>
-            
-        </div>
- 
-
-
 
