--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,12 @@
-element.style {
-    min-height: 904px;
-}
-
 .ng-valid[required] {
   border-left: 5px solid #42A948; /* green */
 }
 
 .ng-invalid {
   border-left: 5px solid #a94442; /* red */
+}
+
+.selected {
+    background-color: #CFD8DC !important;
+    color: white;
 }
