--- a/app/user/user-add.component.html
+++ b/app/user/user-add.component.html
@@ -9,8 +9,9 @@
         <div class="col-lg-12">
             <div class="panel" [ngClass]="submitted? 'panel-success' : 'panel-default'">
                 <div class="panel-heading">                    
+                     <span [hidden]="!submitted">Сохранить пользователя {{user.userName}}?</span>
                      <span>&nbsp;</span> 
-                     <button class="btn btn-default" (click)="goBack()"><i class="fa fa-arrow-circle-left fa-lg"></i></button>
+                     <span [hidden]="submitted"><button class="btn btn-default" (click)="goBack()"><i class="fa fa-arrow-circle-left fa-lg"></i></button></span>
                 </div>
                  <!-- /.panel-heading -->
                 <div class="panel-body">
@@ -29,7 +30,7 @@
                           </div>
                       </div>
                       <div class="form-group">
-                          <label for="op" class="col-sm-2 control-label">ОП</label>
+                          <label for="op" class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
                               <input id="op" class="form-control" ngControl="op" [(ngModel)]="user.op" required minlength="1" maxlength="2" placeholder=":=">
                           </div>
@@ -64,7 +65,7 @@
                           </div>
                       </div>
                       <div class="form-group">
-                          <label class="col-sm-2 control-label">ОП</label>
+                          <label class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
                               <input class="form-control" placeholder="{{ user.op }}" readonly>     
                           </div>
@@ -74,19 +75,14 @@
                           <div class="col-sm-10">
                               <input class="form-control" placeholder="{{ user.value }}" readonly>       
                           </div>
-                      </div>
-                     
+                      </div>                     
                       <div class="form-group">
                           <div class="col-sm-offset-2 col-sm-10">
                               <span><button type="button" class="btn btn-default" (click)="submitted=false"><i class="fa fa-pencil fa-lg"></i> редактрировать</button></span>
                               <span><button type="button" class="btn btn-success pull-right" (click)="onSave()"><i class="fa fa-save fa-lg"></i> сохранить</button></span>                              
                           </div>
                       </div>
-                  </form>
-             
-             
-             
-             
+                  </form>             
              </div>
          </div>
      </div>
