--- a/app/user/user-detail.component.html
+++ b/app/user/user-detail.component.html
@@ -1,37 +1,60 @@
 <div class="row">
-    <div class="col-sm-12">
-        <h1>Автор:</h1>
-    </div>
-</div>
-<div class="row">
-    <div class="col-sm-2">
-        <strong class="pull-right">Имя:</strong>
-    </div>
-    <div class="col-sm-10">
-        {{user.userName}}
-    </div>
-</div>
-<div class="row">
-    <div class="col-sm-2">
-        <strong class="pull-right">Фамилия:</strong>
-    </div>
-    <div class="col-sm-10">
-        {{user.attribute}}
-    </div>
-</div>
-<div class="row">
-    <div class="col-sm-2">
-        <strong class="pull-right">Отчество:</strong>
-    </div>
-    <div class="col-sm-10">
-        {{user.op}}
-    </div>
-</div>
-<div class="row">
-    <div class="col-sm-2">
-        <strong class="pull-right">День рождения:</strong>
-    </div>
-    <div class="col-sm-10">
-        {{user.value}}
-    </div>
+    <div class="col-lg-12">
+        <h1 class="page-header">Пользователь {{ user.userName }}</h1>
+ </div>
+    <!-- /.col-lg-12 -->
+    <!-- /.row -->
+  <div class="row">
+        <div class="col-lg-12">
+            <div class="panel" [ngClass]="confirmDelete? 'panel-danger' : 'panel-default'">
+                <div class="panel-heading">                    
+                     <span [hidden]="!confirmDelete"> Подтвердите удаление пользователя {{ user.userName }}! </span>
+                     <span>&nbsp;</span> 
+                     <span [hidden]="confirmDelete"><button class="btn btn-default" (click)="goBack()"><i class="fa fa-arrow-circle-left fa-lg"></i></button></span>
+                </div>
+                 <!-- /.panel-heading -->
+                <div class="panel-body">                
+                
+                <form class="form-horizontal">
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Имя пользователя</label>
+                          <div class="col-sm-10">
+                              <input class="form-control" placeholder="{{ user.userName }}" readonly>            
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Атрибут</label>
+                          <div class="col-sm-10">
+                              <input class="form-control" placeholder="{{ user.attribute }}" readonly>             
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Оператор</label>
+                          <div class="col-sm-10">
+                              <input class="form-control" placeholder="{{ user.op }}" readonly>     
+                          </div>
+                      </div>
+                      <div class="form-group">
+                          <label class="col-sm-2 control-label">Значение</label>
+                          <div class="col-sm-10">
+                              <input class="form-control" placeholder="{{ user.value }}" readonly>       
+                          </div>
+                      </div>                     
+                      <div class="form-group" [hidden]="confirmDelete">
+                          <div class="col-sm-offset-2 col-sm-10">                              
+                              <span><button type="button" class="btn btn-default" (click)="onEdit()"><i class="fa fa-pencil fa-lg"></i> редактировать</button></span>
+                              <span><button type="button" class="btn btn-default pull-right" (click)="confirmDelete=true"><i class="fa fa-trash fa-lg"></i> удалить</button></span>
+                                                            
+                          </div>
+                      </div>
+                      <div class="form-group" [hidden]="!confirmDelete">
+                            <div class="col-sm-offset-2 col-sm-10">  
+                                <span><button type="button" class="btn btn-default" (click)="confirmDelete=false"><i class="fa fa-undo fa-lg"></i> отмена</button></span>
+                                <span><button type="button" class="btn btn-danger pull-right" (click)="onDelete()"><i class="fa fa-trash fa-lg"></i> удалить</button></span>
+                            </div>
+                      </div>
+                  </form>             
+             </div>
+         </div>
+     </div>
 </div>
