add group component

--- a/app/dashboard/dashboard.component.html
+++ b/app/dashboard/dashboard.component.html
@@ -17,6 +17,7 @@
                          <form role="form">
                               <div class="list-group">
                                  <a href="" [routerLink]="['Users', 'UserAdd']" class="list-group-item">Новый пользователь</a>
+                                 <a href="" [routerLink]="['Groups', 'GroupAdd']" class="list-group-item">Новая группа</a>
                               </div>
                           </form>
                       </div>
@@ -24,5 +25,6 @@
              </div>
         </div>
    </div>
-   </div>
+ </div>
+
 
