--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,4 +1,3 @@
- <div id="wrapper">
 <!-- Navigation -->
         <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
@@ -47,14 +46,16 @@
                             <!-- /input-group -->
                             </li>
                             <li [class.active]="isCurrentRoute(['Users'])">
-                                <a href="" [routerLink]="['Users']"><i class="fa fa-user fa-fw"></i>Пользователи</a>
+                                <a href="" [routerLink]="['Users']"><i class="fa fa-user fa-fw"></i> Пользователи</a>
+                            </li>
+                              <li [class.active]="isCurrentRoute(['Groups'])">
+                                <a href="" [routerLink]="['Groups']"><i class="fa fa-group fa-fw"></i> Группы</a>
                             </li>
                          </ul>
                      </div>
                 </div>     
            </nav>
        
-<div id="page-wrapper">            
+<div id="page-wrapper" style="min-height: 900px;">            
     <router-outlet></router-outlet>
-</div>
 </div>
