--- a/app/group/group-detail.component.html
+++ b/app/group/group-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Пользователь {{ user.userName }}</h1>
+        <h1 class="page-header">Группа {{ group.groupName }}</h1>
  </div>
     <!-- /.col-lg-12 -->
     <!-- /.row -->
@@ -8,7 +8,7 @@
         <div class="col-lg-6">
             <div class="panel" [ngClass]="confirmDelete? 'panel-danger' : 'panel-default'">
                 <div class="panel-heading">                    
-                     <span [hidden]="!confirmDelete"> Подтвердите удаление пользователя {{ user.userName }}! </span>
+                     <span [hidden]="!confirmDelete"> Подтвердите удаление группы {{ group.groupName }}! </span>
                      <span>&nbsp;</span> 
                      <span [hidden]="confirmDelete"><button class="btn btn-default" (click)="goBack()"><i class="fa fa-arrow-circle-left fa-lg"></i></button></span>
                 </div>
@@ -19,25 +19,25 @@
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Имя пользователя</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ user.userName }}" readonly>            
+                              <input class="form-control" placeholder="{{ group.groupName }}" readonly>            
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ user.attribute }}" readonly>             
+                              <input class="form-control" placeholder="{{ group.attribute }}" readonly>             
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ user.op }}" readonly>     
+                              <input class="form-control" placeholder="{{ group.op }}" readonly>     
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ user.value }}" readonly>       
+                              <input class="form-control" placeholder="{{ group.value }}" readonly>       
                           </div>
                       </div>                     
                       <div class="form-group" [hidden]="confirmDelete">
@@ -57,5 +57,5 @@
              </div>
          </div>
      </div>
-   </div>
+ </div>
 </div>
