--- a/app/group/group-edit.component.html
+++ b/app/group/group-edit.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Новый пользователь</h1>
+        <h1 class="page-header">Редактирование группы {{ group.groupName }}</h1>
  </div>
     <!-- /.col-lg-12 -->
     <!-- /.row -->
@@ -9,42 +9,42 @@
         <div class="col-lg-6">
             <div class="panel" [ngClass]="submitted? 'panel-success' : 'panel-default'">
                 <div class="panel-heading">                    
-                     <span [hidden]="!submitted">Сохранить пользователя {{user.userName}}?</span>
+                     <span [hidden]="!submitted">Сохранить изменения {{group.groupName}}?</span>
                      <span>&nbsp;</span> 
                      <span [hidden]="submitted"><button class="btn btn-default" (click)="goBack()"><i class="fa fa-arrow-circle-left fa-lg"></i></button></span>
                 </div>
                  <!-- /.panel-heading -->
                 <div class="panel-body">
                    <div [hidden]="submitted">
-                     <form class="form-horizontal" *ngIf="active" (ngSubmit)="onSubmit()"  #userAdd="ngForm">
+                     <form class="form-horizontal" *ngIf="active" (ngSubmit)="onSubmit()"  #groupEdit="ngForm">
                       <div class="form-group">
-                          <label for="userName" class="col-sm-2 control-label">Имя пользователя</label>
+                          <label for="userName" class="col-sm-2 control-label">Имя группы</label>
                           <div class="col-sm-10">
-                              <input id="userName" class="form-control" ngControl="userName" [(ngModel)]="user.userName" #userName="ngForm" required minlength="3" maxlength="64" placeholder="Jon">             
+                              <input id="groupName" class="form-control" ngControl="groupName" [(ngModel)]="group.groupName" #groupName="ngForm" required minlength="3" maxlength="64" placeholder="Jon">             
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="attribute" class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input id="attribute" class="form-control" ngControl="attribute" [(ngModel)]="user.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
+                              <input id="attribute" class="form-control" ngControl="attribute" [(ngModel)]="group.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="op" class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
-                              <input id="op" class="form-control" ngControl="op" [(ngModel)]="user.op" #op="ngForm" required minlength="1" maxlength="2" placeholder=":=">
+                              <input id="op" class="form-control" ngControl="op" [(ngModel)]="group.op" #op="ngForm" required minlength="1" maxlength="2" placeholder=":=">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="value" class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input id="value" class="form-control" ngControl="value" [(ngModel)]="user.value" #value="ngForm" required minlength="6" maxlength="253" placeholder="mypassword">
+                              <input id="value" class="form-control" ngControl="value" [(ngModel)]="group.value" #value="ngForm" required minlength="1" maxlength="253" placeholder="mypassword">
                           </div>
                       </div>  
                       <div class="form-group">
                           <div class="col-sm-offset-2 col-sm-10">
                               <span><button type="button" class="btn btn-default" (click)="clearForm()"><i class="fa fa-eraser fa-lg"></i> очистить</button></span>                   
-                              <span><button type="submit" class="btn btn-default pull-right"  [disabled]="!userAdd.form.valid"><i class="fa fa-save fa-lg"></i> сохранить</button></span>
+                              <span><button type="submit" class="btn btn-default pull-right"  [disabled]="!groupEdit.form.valid"><i class="fa fa-save fa-lg"></i> сохранить</button></span>
                           </div>
                       </div>
                   </form>
@@ -53,27 +53,27 @@
          <div [hidden]="!submitted">
              <form class="form-horizontal">
                       <div class="form-group">
-                          <label class="col-sm-2 control-label">Имя пользователя</label>
+                          <label class="col-sm-2 control-label">Имя группы</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ user.userName }}" readonly>            
+                              <input class="form-control" placeholder="{{ group.groupName }}" readonly>            
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ user.attribute }}" readonly>             
+                              <input class="form-control" placeholder="{{ group.attribute }}" readonly>             
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ user.op }}" readonly>     
+                              <input class="form-control" placeholder="{{ group.op }}" readonly>     
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ user.value }}" readonly>       
+                              <input class="form-control" placeholder="{{ group.value }}" readonly>       
                           </div>
                       </div>                     
                       <div class="form-group">
@@ -87,7 +87,7 @@
            </div>
        </div>
     </div>
-  </div>
+ </div>
 </div>
 
 
