--- a/app/group/group-add.component.html
+++ b/app/group/group-add.component.html
@@ -18,15 +18,15 @@
                    <div [hidden]="submitted">
                      <form class="form-horizontal" *ngIf="active" (ngSubmit)="onSubmit()"  #groupAdd="ngForm">
                       <div class="form-group">
-                          <label for="groupName" class="col-sm-2 control-label">Имя группы</label>
+                          <label for="groupName" class="col-sm-2 control-label">Группа</label>
                           <div class="col-sm-10">
-                              <input id="groupName" class="form-control" ngControl="groupName" [(ngModel)]="group.groupName" #groupName="ngForm" required minlength="3" maxlength="64" placeholder="Jon">             
+                              <input id="groupName" class="form-control" ngControl="groupName" [(ngModel)]="group.groupName" #groupName="ngForm" required minlength="3" maxlength="64" placeholder="NewGroup">             
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="attribute" class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input id="attribute" class="form-control" ngControl="attribute" [(ngModel)]="group.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
+                              <input id="attribute" class="form-control" ngControl="attribute" [(ngModel)]="group.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Simultaneous-Use">
                           </div>
                       </div>
                       <div class="form-group">
@@ -38,7 +38,7 @@
                       <div class="form-group">
                           <label for="value" class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input id="value" class="form-control" ngControl="value" [(ngModel)]="group.value" #value="ngForm" required minlength="1" maxlength="253" placeholder="mypassword">
+                              <input id="value" class="form-control" ngControl="value" [(ngModel)]="group.value" #value="ngForm" required minlength="1" maxlength="253" placeholder="1">
                           </div>
                       </div>  
                       <div class="form-group">
@@ -53,7 +53,7 @@
          <div [hidden]="!submitted">
              <form class="form-horizontal">
                       <div class="form-group">
-                          <label class="col-sm-2 control-label">Имя группы</label>
+                          <label class="col-sm-2 control-label">Группа</label>
                           <div class="col-sm-10">
                               <input class="form-control" placeholder="{{ group.groupName }}" readonly>            
                           </div>
