--- a/app/group/group-detail.component.html
+++ b/app/group/group-detail.component.html
@@ -17,7 +17,7 @@
                 
                 <form class="form-horizontal">
                       <div class="form-group">
-                          <label class="col-sm-2 control-label">Имя пользователя</label>
+                          <label class="col-sm-2 control-label">Группа</label>
                           <div class="col-sm-10">
                               <input class="form-control" placeholder="{{ group.groupName }}" readonly>            
                           </div>
