--- a/app/user/user-edit.component.html
+++ b/app/user/user-edit.component.html
@@ -18,7 +18,7 @@
                    <div [hidden]="submitted">
                      <form class="form-horizontal" *ngIf="active" (ngSubmit)="onSubmit()"  #userEdit="ngForm">
                       <div class="form-group">
-                          <label for="userName" class="col-sm-2 control-label">Имя пользователя</label>
+                          <label for="userName" class="col-sm-2 control-label">Пользователь</label>
                           <div class="col-sm-10">
                               <input id="userName" class="form-control" ngControl="userName" [(ngModel)]="user.userName" #userName="ngForm" required minlength="3" maxlength="64" placeholder="Jon">             
                           </div>
@@ -53,7 +53,7 @@
          <div [hidden]="!submitted">
              <form class="form-horizontal">
                       <div class="form-group">
-                          <label class="col-sm-2 control-label">Имя пользователя</label>
+                          <label class="col-sm-2 control-label">Пользователь</label>
                           <div class="col-sm-10">
                               <input class="form-control" placeholder="{{ user.userName }}" readonly>            
                           </div>
@@ -78,7 +78,7 @@
                       </div>                     
                       <div class="form-group">
                           <div class="col-sm-offset-2 col-sm-10">
-                              <span><button type="button" class="btn btn-default" (click)="submitted=false"><i class="fa fa-pencil fa-lg"></i> редактрировать</button></span>
+                              <span><button type="button" class="btn btn-default" (click)="submitted=false"><i class="fa fa-edit fa-lg"></i> редактрировать</button></span>
                               <span><button type="button" class="btn btn-success pull-right" (click)="onSave()"><i class="fa fa-save fa-lg"></i> сохранить</button></span>                              
                           </div>
                       </div>
