--- a/app/userattr/usersattr-list.component.html
+++ b/app/userattr/usersattr-list.component.html
@@ -1,14 +1,8 @@
-
- <div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">Список доп.атрибутов пользователей</h1>
-    </div>
-    <!-- /.col-lg-12 -->
-    <!-- /.row -->
     <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-4">
             <div class="panel panel-default">
-                <div class="panel-heading">                    
+                <div class="panel-heading">
+                     Доп.атрибуты пользователей                    
                      <span>&nbsp;</span>
                      <button class="btn btn-default" (click)="goToNewUserAttr()"><i class="fa fa-pencil fa-lg"> создать</i></button>                     
                  </div>
@@ -28,4 +22,4 @@
              </div>
          </div>
     </div>
-</div>
+
