--- a/app/group/groups-list.component.html
+++ b/app/group/groups-list.component.html
@@ -1,14 +1,15 @@
 
  <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Список групп</h1>
+        <h1 class="page-header">Группы</h1>
     </div>
     <!-- /.col-lg-12 -->
     <!-- /.row -->
     <div class="row">
         <div class="col-lg-6">
             <div class="panel panel-default">
-                <div class="panel-heading">                    
+                <div class="panel-heading">
+                     Список групп                    
                      <span>&nbsp;</span>
                      <button class="btn btn-default" (click)="goToNewGroup()"><i class="fa fa-pencil fa-lg"> создать</i></button>                     
                  </div>
@@ -27,5 +28,6 @@
                  </div>
              </div>
          </div>
+         <groupsattr-list></groupsattr-list> 
     </div>
 </div>
