--- a/app/app.component.html
+++ b/app/app.component.html
@@ -39,7 +39,7 @@
                                 <input type="text" class="form-control" placeholder="Поиск...">
                                 <span class="input-group-btn">
                                 <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
+                                    <i class="fa fa-search fa-fw"></i>
                                 </button>
                             </span>
                             </div>
@@ -55,7 +55,6 @@
                      </div>
                 </div>     
            </nav>
-       
-<div id="page-wrapper" style="min-height: 900px;">            
-    <router-outlet></router-outlet>
-</div>
+    <div id="page-wrapper" style="min-height: 900px;">            
+        <router-outlet></router-outlet>
+    </div>
