--- a/app/groupattr/groupattr-detail.component.html
+++ b/app/groupattr/groupattr-detail.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Доп.атибуты пользователя {{ userAttr.userName }}</h1>
+        <h1 class="page-header">Доп.атибуты группы {{ groupAttr.userName }}</h1>
  </div>
     <!-- /.col-lg-12 -->
     <!-- /.row -->
@@ -8,7 +8,7 @@
         <div class="col-lg-6">
             <div class="panel" [ngClass]="confirmDelete? 'panel-danger' : 'panel-default'">
                 <div class="panel-heading">                    
-                     <span [hidden]="!confirmDelete"> Подтвердите удаление доп.атрибутов пользователя {{ userAttr.userName }}! </span>
+                     <span [hidden]="!confirmDelete"> Подтвердите удаление доп.атрибутов группы {{ groupAttr.groupName }}! </span>
                      <span>&nbsp;</span> 
                      <span [hidden]="confirmDelete"><button class="btn btn-default" (click)="goBack()"><i class="fa fa-arrow-circle-left fa-lg"></i></button></span>
                 </div>
@@ -17,27 +17,27 @@
                 
                 <form class="form-horizontal">
                       <div class="form-group">
-                          <label class="col-sm-2 control-label">Пользователь</label>
+                          <label class="col-sm-2 control-label">Группа</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ userAttr.userName }}" readonly>            
+                              <input class="form-control" placeholder="{{ groupAttr.groupName }}" readonly>            
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ userAttr.attribute }}" readonly>             
+                              <input class="form-control" placeholder="{{ groupAttr.attribute }}" readonly>             
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ userAttr.op }}" readonly>     
+                              <input class="form-control" placeholder="{{ groupAttr.op }}" readonly>     
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ userAttr.value }}" readonly>       
+                              <input class="form-control" placeholder="{{ groupAttr.value }}" readonly>       
                           </div>
                       </div>                     
                       <div class="form-group" [hidden]="confirmDelete">
