--- a/app/groupattr/groupattr-edit.component.html
+++ b/app/groupattr/groupattr-edit.component.html
@@ -1,7 +1,7 @@
 
 <div class="row">
     <div class="col-lg-12">
-        <h1 class="page-header">Редактирование доп.атрибутов пользователя {{ userAttr.userName }}</h1>
+        <h1 class="page-header">Редактирование доп.атрибутов группы {{ groupAttr.groupName }}</h1>
  </div>
     <!-- /.col-lg-12 -->
     <!-- /.row -->
@@ -9,41 +9,41 @@
         <div class="col-lg-6">
             <div class="panel" [ngClass]="submitted? 'panel-success' : 'panel-default'">
                 <div class="panel-heading">                    
-                     <span [hidden]="!submitted">Сохранить изменения {{ userAttr.userName }}?</span>
+                     <span [hidden]="!submitted">Сохранить изменения {{ groupAttr.groupName }}?</span>
                      <span>&nbsp;</span> 
                      <span [hidden]="submitted"><button class="btn btn-default" (click)="goBack()"><i class="fa fa-arrow-circle-left fa-lg"></i></button></span>
                 </div>
                  <!-- /.panel-heading -->
                 <div class="panel-body">
                    <div [hidden]="submitted">
-                     <form class="form-horizontal" *ngIf="active" (ngSubmit)="onSubmit()"  #userAttrEdit="ngForm">
+                     <form class="form-horizontal" *ngIf="active" (ngSubmit)="onSubmit()"  #groupAttrEdit="ngForm">
                       <div class="form-group">
-                          <label for="userName" class="col-sm-2 control-label">Пользователь</label>
+                          <label for="userName" class="col-sm-2 control-label">Группа</label>
                           <div class="col-sm-10">
-                              <input id="userName" class="form-control" ngControl="userName" [(ngModel)]="userAttr.userName" #userName="ngForm" readonly>             
+                              <input id="groupName" class="form-control" ngControl="groupName" [(ngModel)]="groupAttr.userName" #userName="ngForm" readonly>             
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="attribute" class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input id="attribute" class="form-control" ngControl="attribute" [(ngModel)]="userAttr.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
+                              <input id="attribute" class="form-control" ngControl="attribute" [(ngModel)]="groupAttr.attribute" #attribute="ngForm" required minlength="5" maxlength="64" placeholder="Cleartext-Password">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="op" class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
-                              <input id="op" class="form-control" ngControl="op" [(ngModel)]="userAttr.op" #op="ngForm" required minlength="1" maxlength="2" placeholder=":=">
+                              <input id="op" class="form-control" ngControl="op" [(ngModel)]="groupAttr.op" #op="ngForm" required minlength="1" maxlength="2" placeholder=":=">
                           </div>
                       </div>
                       <div class="form-group">
                           <label for="value" class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input id="value" class="form-control" ngControl="value" [(ngModel)]="userAttr.value" #value="ngForm" required minlength="6" maxlength="253" placeholder="mypassword">
+                              <input id="value" class="form-control" ngControl="value" [(ngModel)]="groupAttr.value" #value="ngForm" required minlength="6" maxlength="253" placeholder="mypassword">
                           </div>
                       </div>  
                       <div class="form-group">
                           <div class="col-sm-offset-2 col-sm-10">
-                              <span><button type="submit" class="btn btn-default pull-right"  [disabled]="!userAttrEdit.form.valid"><i class="fa fa-save fa-lg"></i> сохранить</button></span>
+                              <span><button type="submit" class="btn btn-default pull-right"  [disabled]="!groupAttrEdit.form.valid"><i class="fa fa-save fa-lg"></i> сохранить</button></span>
                           </div>
                       </div>
                   </form>
@@ -52,27 +52,27 @@
          <div [hidden]="!submitted">
              <form class="form-horizontal">
                       <div class="form-group">
-                          <label class="col-sm-2 control-label">Пользователь</label>
+                          <label class="col-sm-2 control-label">Группа</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ userAttr.userName }}" readonly>            
+                              <input class="form-control" placeholder="{{ groupAttr.userName }}" readonly>            
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Атрибут</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ userAttr.attribute }}" readonly>             
+                              <input class="form-control" placeholder="{{ groupAttr.attribute }}" readonly>             
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Оператор</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ userAttr.op }}" readonly>     
+                              <input class="form-control" placeholder="{{ groupAttr.op }}" readonly>     
                           </div>
                       </div>
                       <div class="form-group">
                           <label class="col-sm-2 control-label">Значение</label>
                           <div class="col-sm-10">
-                              <input class="form-control" placeholder="{{ userAttr.value }}" readonly>       
+                              <input class="form-control" placeholder="{{ groupAttr.value }}" readonly>       
                           </div>
                       </div>                     
                       <div class="form-group">
