--- a/app/app.component.html
+++ b/app/app.component.html
@@ -1,60 +1,50 @@
-<!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-            <a class="navbar-brand" href="" [routerLink]="['Dashboard']">freerad-web-client</a>
-        </div>
-        <!-- /.navbar-header -->
-
-        <ul class="nav navbar-top-links navbar-right">
-           <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
-                        <i class="fa fa-user-secret fa-fw"></i>  <i class="fa fa-caret-down"></i>
-                    </a>
-                    <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-                        </li>
-                    </ul>
-                    <!-- /.dropdown-user -->
-                </li>
-                <!-- /.dropdown -->
-            </ul> 
-             <!-- /.navbar-top-links -->
-
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
+ <!-- Navigation -->
+  <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+         <div class="navbar-header">
+             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                 <span class="sr-only">Toggle navigation</span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+                 <span class="icon-bar"></span>
+             </button>
+         <a class="navbar-brand"> FreeRadius Web Client </a>
+     </div>
+     <!-- /.navbar-header -->
+     <ul class="nav navbar-top-links">
+         <li>
+             <a href="" [routerLink]="['Dashboard']"><span class="glyphicon glyphicon-home" aria-hidden="true"></span></a>
+         </li>
+         <li class="pull-right">
+             <a href="#"><i class="fa fa-user-secret fa-fw"></i></a>
+         </li>
+     </ul>
+     <!-- /.navbar-top-links -->
+         <div class="navbar-default sidebar" role="navigation">
+             <div class="sidebar-nav navbar-collapse">
+                 <ul class="nav" id="side-menu">
+                     <li class="sidebar-search">
                             <div class="input-group custom-search-form">
                                 <input type="text" class="form-control" placeholder="Поиск...">
-                                <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search fa-fw"></i>
-                                </button>
-                            </span>
+                                    <span class="input-group-btn">
+                                        <button class="btn btn-default" type="button">
+                                            <i class="fa fa-search fa-fw"></i>
+                                        </button>
+                                    </span>
                             </div>
-                            <!-- /input-group -->
-                            </li>
-                            <li [class.active]="isCurrentRoute(['Users'])">
-                                <a href="" [routerLink]="['Users']"><i class="fa fa-user fa-fw"></i> Пользователи</a>
-                            </li>
-                              <li [class.active]="isCurrentRoute(['Groups'])">
-                                <a href="" [routerLink]="['Groups']"><i class="fa fa-group fa-fw"></i> Группы</a>
-                            </li>
-                         </ul>
-                     </div>
-                </div>     
-           </nav>
-    <div id="page-wrapper" style="min-height: 900px;">            
-        <router-outlet></router-outlet>
-    </div>
+                        <!-- /input-group -->
+                     </li>
+                     <li [class.active]="isCurrentRoute(['Users'])">
+                         <a href="" [routerLink]="['Users']"><i class="fa fa-user fa-fw"></i> 
+                            Пользователи                           
+                         </a>
+                     </li>
+                     <li [class.active]="isCurrentRoute(['Groups'])">
+                         <a href="" [routerLink]="['Groups']"><i class="fa fa-group fa-fw"></i> Группы</a>
+                     </li>
+                   </ul>
+               </div>
+           </div>     
+        </nav>
+  <div id="page-wrapper" style="min-height: 900px;">            
+     <router-outlet></router-outlet>
+</div>
