--- a/app/groupattr/groupsattr-list.component.html
+++ b/app/groupattr/groupsattr-list.component.html
@@ -1,9 +1,8 @@
-    <div class="row">
+
         <div class="col-lg-4">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                     Доп.атрибуты                     
-                     <span>&nbsp;</span>
+                     <h3><span class="label label-primary">Доп.атрибуты</span></h3>                     
                      <button class="btn btn-default" (click)="goToNewGroupAttr()"><i class="fa fa-pencil fa-lg"> создать</i></button>                     
                  </div>
                  <!-- /.panel-heading -->
@@ -14,12 +13,15 @@
                       </div>
                       <ul class="list-group">
                          <a href="" [routerLink]="['GroupAttrDetail', {id: groupAttr.id}]" *ngFor="let groupAttr of groupAttrs" class="list-group-item">
-                            <span><i class="fa fa-user-plus fa-lg"></i></span>
+                           <span class="fa-stack fa-lg">
+                               <i class="fa fa-square fa-stack-2x"></i>
+                               <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+                            </span>
                             <span> - {{ groupAttr.groupName }}</span>
                          </a>
                       </ul>
                  </div>
              </div>
          </div>
-    </div>
+  
 
